# palette_image

./: .gitignore  .pre-commit-config.yaml  README.md  issued_info  issued_info.json  pyproject.toml  temp.json
resources/: colornames.csv
scripts/: collect_source_images.py  convert_classic.py  convert_old_issued_palettes.py
src/palette_image/: __init__.py  color_block_ops.py  colornames.py  crop_image.py  geometry.py  globs.py  image_ops.py  main.py  palette_page.py  partition_colors.py  svg_display.py  type_bbox.py  type_hints.py  update_colornames_csv.py
templates/: palette  palette_page
tests/: conftest.py  test_write_palette.py
tests/resources/: 200708 - Sam Francis - Middle Blue.txt
