[project]
name = "palette_image"
version = "0.1.0"
description = "Generate images for my palette article"
authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["basic_colormath", "svg_ultralight", "lxml", "pillow"]

[project.optional-dependencies]
dev = ["commitizen", "pre-commit", "pytest", "types-lxml"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{313}

[testenv]
deps = pytest
commands = pytest
"""


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.13"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./venv"
